<resources>
    <string name="app_name">InClass12</string>
    <string name="select_keyword">Select keyword</string>
    <string name="no_city">There is no such city. Please try again</string>
    <string name="no_trips">There is no previous trip to show. Please add new trip</string>
    <string name="no_places">There is no places to for the trip. Try some other keyword</string>
    <string name="create_trip">Create Trip</string>
    <string name="previous_trip">Previous Trips : </string>
    <string name="search_city">Search a City</string>
    <string name="city_name">City Name</string>
    <string name="search">Search</string>
    <string name="select_city">Select a city from the list :</string>
    <string name="trip_details">Trip Details</string>
    <string name="view_on_map">View on Map</string>

</resources>
