<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="38dp"
        android:text="@string/search_city" />

    <EditText
        android:id="@+id/et_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:hint="@string/city_name"/>

    <Button
        android:id="@+id/btn_search_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="158dp"
        android:layout_marginTop="110dp"
        android:text="@string/search" />


    <TextView
        android:id="@+id/tv_no_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:padding="10dp"
        android:text="@string/no_city"
        android:textSize="16sp"
        android:visibility="gone"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_results"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_below="@id/btn_search_city"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_search_city"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/select_city"/>


</RelativeLayout>