<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripDetailsActivity">

    <TextView
        android:id="@+id/tv_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="22dp"
        android:text="@string/trip_details"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv_no_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_details"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="92dp"
        android:padding="10dp"
        android:text="@string/no_places"
        android:textSize="16sp"
        android:visibility="gone" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_results"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_below="@id/tv_details"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/btn_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="140dp"
        android:text="@string/view_on_map" />

</RelativeLayout>