<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTripActivity">

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="19dp"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_keyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="80dp"
        android:text="@string/select_keyword" />


    <Spinner
        android:id="@+id/sp_keyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_keyword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-28dp"
        android:layout_marginEnd="67dp"
        android:ems="10"
        android:padding="15dp"
        android:prompt="@string/select_keyword" />

    <Button
        android:id="@+id/btn_create_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="159dp"
        android:layout_marginTop="149dp"
        android:text="@string/create_trip" />


    <TextView
        android:id="@+id/tv_no_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:padding="10dp"
        android:text="@string/no_trips"
        android:textSize="16sp"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_results"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_below="@id/btn_create_trip"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="202dp"
        android:text="@string/previous_trip" />


</RelativeLayout>